# rfc-extractor

./: LICENSE  README.md  pyproject.toml
output/: rfc8650.json  rfc8650.xml  rfc8651.xml  rfc8652.xml  rfc8653.xml  rfc8654.json  rfc8654.xml  rfc8655.json  rfc8655.xml  rfc8656.json  rfc8656.xml  rfc8657.json  rfc8657.xml  rfc8658.json  rfc8658.xml  rfc8659.xml  rfc8660.xml  rfc8661.xml  rfc8662.json  rfc8662.xml  rfc8663.xml  rfc8664.xml  rfc8665.json  rfc8665.xml  rfc8666.json  rfc8666.xml  rfc8667.xml  rfc8668.json  rfc8668.xml  rfc8669.json  rfc8669.xml  rfc8670.xml  rfc8671.xml  rfc8672.xml  rfc8673.json  rfc8673.xml  rfc8674.xml  rfc8675.xml  rfc8676.json  rfc8676.xml  (+1638 more)
src/: extractor.py
