[project]
name = "extractor"
version = "0.0.2"
description = "Extract abtract and author information from RFCs and Internet-Drafts (I-Ds)."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [{name = "Kesara Rathnayake", email = "kesara@staff.ietf.org"}]
keywords = ["ietf", "rfc", "id", "internet-draft", "xml", "xml2rfc", "xmlrfc"]
classifiers = [
    "Environment :: Console",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Markup :: XML",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
dependencies = [
    "xml2rfc>=3.28.1",
]

[project.urls]
homepage = "https://github.com/ietf-tools/"
source = "https://github.com/kesara/rfc-extractor"
issues = "https://github.com/kesara/rfc-extractor/issues"

[project.scripts]
extractor = "src.extractor:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ['py313']
